# pdf-reader-gpui

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
src/: allocator.rs  assets.rs  elm.rs  lib.rs  main.rs  pdf.rs  prompt.rs  tabs.rs
